[gd_scene load_steps=8 format=3 uid="uid://ui_scene"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="panel_style"]
bg_color = Color(0.1, 0.1, 0.12, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.5, 0.7, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.5)

[sub_resource type="StyleBoxFlat" id="stat_panel_style"]
bg_color = Color(0.15, 0.15, 0.18, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.3, 0.35, 0.6)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="button_normal"]
bg_color = Color(0.2, 0.4, 0.6, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.5, 0.8, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="button_hover"]
bg_color = Color(0.25, 0.5, 0.75, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 0.9, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_size = 2
shadow_color = Color(0.3, 0.5, 0.8, 0.5)

[sub_resource type="StyleBoxFlat" id="button_pressed"]
bg_color = Color(0.15, 0.35, 0.55, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.4, 0.7, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="gameover_panel_style"]
bg_color = Color(0.1, 0.1, 0.12, 0.98)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.3, 0.3, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_size = 8
shadow_color = Color(0, 0, 0, 0.7)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1")

[node name="TopPanel" type="PanelContainer" parent="."]
offset_left = 15.0
offset_top = 15.0
offset_right = 265.0
offset_bottom = 200.0
theme_override_styles/panel = SubResource("panel_style")

[node name="MarginContainer" type="MarginContainer" parent="TopPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="TopPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="TopPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 20
text = "üè∞ Â°îÈò≤ÊåáÊå•‰∏≠ÂøÉ"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="TopPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="StatsContainer" type="VBoxContainer" parent="TopPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="MoneyPanel" type="PanelContainer" parent="TopPanel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("stat_panel_style")

[node name="MoneyLabel" type="Label" parent="TopPanel/MarginContainer/VBoxContainer/StatsContainer/MoneyPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "üí∞ ÈáëÈí±: 200"

[node name="LivesPanel" type="PanelContainer" parent="TopPanel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("stat_panel_style")

[node name="LivesLabel" type="Label" parent="TopPanel/MarginContainer/VBoxContainer/StatsContainer/LivesPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 16
text = "‚ù§Ô∏è  ÁîüÂëΩ: 20"

[node name="WavePanel" type="PanelContainer" parent="TopPanel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("stat_panel_style")

[node name="WaveLabel" type="Label" parent="TopPanel/MarginContainer/VBoxContainer/StatsContainer/WavePanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 1, 1)
theme_override_font_sizes/font_size = 16
text = "üåä Ê≥¢Ê¨°: 1"

[node name="HSeparator2" type="HSeparator" parent="TopPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TowersLabel" type="Label" parent="TopPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 14
text = "Âª∫ÈÄ†Èò≤Âæ°Â°îÔºö"
horizontal_alignment = 1

[node name="TowerButtons" type="VBoxContainer" parent="TopPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Tower1Button" type="Button" parent="TopPanel/MarginContainer/VBoxContainer/TowerButtons"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("button_normal")
theme_override_styles/hover = SubResource("button_hover")
theme_override_styles/pressed = SubResource("button_pressed")
text = "‚öîÔ∏è  Âü∫Á°ÄÂ°î ($50)"

[node name="Tower2Button" type="Button" parent="TopPanel/MarginContainer/VBoxContainer/TowerButtons"]
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("button_normal")
theme_override_styles/hover = SubResource("button_hover")
theme_override_styles/pressed = SubResource("button_pressed")
text = "‚ö° Âø´ÈÄüÂ°î ($100)"

[node name="GameOverPanel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("gameover_panel_style")

[node name="MarginContainer" type="MarginContainer" parent="GameOverPanel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="GameOverPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 32
text = "üíÄ Ê∏∏ÊàèÁªìÊùü"
horizontal_alignment = 1

[node name="Message" type="Label" parent="GameOverPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "Êïå‰∫∫Á™ÅÁ†¥‰∫Ü‰Ω†ÁöÑÈò≤Á∫øÔºÅ"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 45)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("button_normal")
theme_override_styles/hover = SubResource("button_hover")
theme_override_styles/pressed = SubResource("button_pressed")
text = "üîÑ ÈáçÊñ∞ÂºÄÂßã"

[connection signal="pressed" from="TopPanel/MarginContainer/VBoxContainer/TowerButtons/Tower1Button" to="." method="_on_tower1_button_pressed"]
[connection signal="pressed" from="TopPanel/MarginContainer/VBoxContainer/TowerButtons/Tower2Button" to="." method="_on_tower2_button_pressed"]
[connection signal="pressed" from="GameOverPanel/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
